complete gulp file with bower depedencies and output current time

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <title>alarm clock</title>
   </head>
   <body>
-
+    <div class="container">
+      <div class="time"><p>
+        The current time is <p id="time"></p></p></div>
+    </div>
   </body>
 </html>
