--- a/index.html
+++ b/index.html
@@ -15,5 +15,12 @@
       <div class="time"><p>
         The current time is <p id="time"></p></p></div>
     </div>
+    <form id="alarmSet">
+      <label for="">Set time:</label>
+      <input type="time" name="timeSet" id="timeSet">
+      <label for="">Set date:</label>
+      <input type="date" name="dateSet" id="dateSet">
+      <button type="submit" name="button">Set Alarm</button>
+    </form>
   </body>
 </html>
