add kitty alarm with youtube api

--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
     <form id="alarmSet">
       <label for="">Set time:</label>
       <input type="time" name="timeSet" id="timeSet">
-      <label for="">Set date:</label>
-      <input type="date" name="dateSet" id="dateSet">
+      <label for="search">Enter what kind of video you want to wake up to</label>
+      <input type="text" name="search" id="search">
       <button type="submit" name="button">Set Alarm</button>
     </form>
+    <div id="player">
+      <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/rdYE3Wm6jX8" frameborder="0" allowfullscreen></iframe> -->
+    </div>
+  
   </body>
 </html>
